tests/fixtures/invalid/none_div_dict.py
# Cannot divide None and Dict[str, int]
x: float = None / {"a": 1}
